feat: Include promoted trips in CREATED status for ongoing public trips retrieval